[package]
name = "polylux2pdfpc"
license = "MIT"
description = "A tool to make pdfpc interpret slides created by polylux correctly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "5.10.0", features = ["fancy"] }
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
